# Infernux

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MANIFEST.in  MERGE_REQUEST.md  README-zh.md  README.md  UpdateLog.md  copy_dependencies.cmake.in  install_wheel.cmake  pyproject.toml  release_hub.bat  update_api_docs.bat
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-on-version.yml  build-wiki.yml  ci.yml  website-health.yml  website-quality.yml
cmake/: InfernuxHub.cmake  clean_python_pycache.cmake  clean_stale_native_modules.cmake  prebuild_player_runtime.cmake  verify_python_wheel.cmake
cpp/infengine/: InfEngine.cpp
cpp/infernux/: Infernux.cpp  Infernux.h
cpp/tests/: AssetDependencyGraphTests.cpp  AssetIndexTests.cpp  AtomicFileTests.cpp  ComponentDataStoreTests.cpp  DocumentStoreTests.cpp  DocumentTransactionTests.cpp  JobSystemTests.cpp  MeshArtifactTests.cpp  SkinnedMeshArtifactTests.cpp  TextureArtifactTests.cpp
dev/: INFERNUX_COMMUNITY_SETUP.md  INFERNUX_WEBSITE_RENEWAL_PLAN.md  render_audit.py
dev/templates/: manual.en.template.md  manual.zh.template.md
docs/: 404.html  CNAME  api-changes.json  api-index.json  community-topic.html  community.html  docs-health.json  docs-index.json  docs-manifest.json  download.html  index.html  learn.html  learning-paths.json  llms-full.txt  llms.txt  offline.html  release-notes.json  release.json  roadmap.html  robots.txt  site.webmanifest  sitemap.xml  start.html  sw.js  wiki.html
docs/api-snapshots/: 0.2.1.json  0.2.9.json
docs/assets/: VENDOR_ASSETS.md  demo-0.2.1.avif  wiki-docs.3718aba9f552a039.json  wiki-docs.81ce8c0b810ae927.json  wiki-docs.df29025c0ecc95b0.json  wiki-docs.json
docs/css/: community.css  docs-search.css  download.css  fontawesome-subset.css  fonts.css  home.css  learn.css  mission.css  start.css  style.css  wiki-generated.css  wiki-noscript.css  wiki-template.8274a64753b131d2.css  wiki-template.887c9f5039d80bba.css  wiki-template.8eba3304d580e5c4.css  wiki.css
docs/js/: bilingual-page.js  community-api-v5.js  community-api.js  community-giscus.js  community-topic.js  community.js  docs-health.js  docs-recent.js  docs-search.js  download.js  home.js  i18n-404.js  i18n-community-topic.js  i18n-community.js  i18n-download.js  i18n-index.js  i18n-learn.js  i18n-roadmap.js  i18n-start.js  i18n-wiki.js  i18n.js  learn.js  main.js  pwa-install.js  wiki-generated.js  wiki.js
docs/learn/: placeholder.html  placeholder.md
docs/tools/: apply-api-curation.mjs  build-agent-corpus.mjs  build-api-diff.mjs  build-api-index.mjs  build-doc-health.mjs  build-doc-index.mjs  build-i18n.mjs  build-llms-index.mjs  build-release-notes.mjs  build-service-worker.mjs  build-sitemap.mjs  build-wiki-catalog.mjs  check-color-contrast.mjs  check-community-readiness.mjs  check-deployed-site.mjs  check-image-variants.mjs  check-pwa-assets.mjs  check-runtime-assets.mjs  check-static-budget.mjs  community-readiness-core.mjs  i18n-source.json  normalize-wiki-config.mjs  optimize-static-site.mjs  stamp-docs-manifest.mjs  sync-curated-frontmatter.mjs  test-community-client.mjs  test-community-readiness.mjs  test-doc-context.mjs  test-doc-health.mjs  test-doc-language-continuity.mjs  test-doc-print.mjs  test-doc-recent.mjs  test-doc-search.mjs  test-download-client.mjs  test-home-client.mjs  test-i18n-bundles.mjs  test-llms-index.mjs  test-mobile-navigation.mjs  test-pwa-install.mjs  test-responsive-contracts.mjs  (+7 more)
docs/wiki/: generate_api_docs.py  mkdocs.yml  requirements.txt
docs/wiki/docs/: index.md
issues/: 1.md
packaging/: about_content.py  build_hub.py  database.py  embed_runtime_manager.py  hub_resources.py  hub_updater.py  hub_utils.py  i18n.py  incremental_update.py  infernux_hub.spec  infernux_hub_installer.spec  installer_gui.py  installer_safety.py  launcher.py  project_migration.py  project_paths.py  pyi_rth_infernux_utf8.py  release_hub.ps1  runtime_requirements.py  splash_screen.py  stage_bundled_python_runtime.py  style.py  ui_project_list.py  version_manager.py  windows_version_info.txt
packaging/installer/: install_application.py  payload.py
packaging/model/: new_project_model.py  project_model.py
packaging/tests/: test_hub_hover_widgets.py  test_hub_installer.py  test_hub_launch_state.py  test_hub_project_workflow.py  test_hub_updater.py  test_incremental_update.py  test_update_dialog.py
packaging/view/: control_pane_view.py  discussion_view.py  hover_widgets.py  installs_view.py  new_project_view.py  settings_view.py  sidebar_view.py  update_dialog.py
packaging/viewmodel/: control_pane_viewmodel.py
python/InfEngine/: _jit_kernels.pyi
python/Infernux/: __init__.py  __init__.pyi  batch.py  debug.py  debug.pyi  runtime_utf8.py  timing.py
python/test/: conftest.py  test_animation_fsm.py  test_animclip2d_semantics.py  test_asset_mutation_facade.py  test_build_settings_semantics.py  test_component_data_store.py  test_components_builtin_component.py  test_components_builtin_rigidbody.py  test_components_ref_wrappers.py  test_components_serializable_object.py  test_core_anim_state_machine.py  test_core_animation_timeline.py  test_core_asset_types.py  test_core_texture.py  test_core_timeline_fsm_runtime.py  test_core_vfx_system.py  test_document_store.py  test_editor_confirmation_dialogs.py  test_engine_deferred_task.py  test_engine_play_mode.py  test_engine_status.py  test_engine_undo.py  test_game_builder.py  test_game_input_policy.py  test_game_view_panel.py  test_graph_editor_semantics.py  test_hierarchy_creation_service.py  test_hub_project_model.py  test_hub_version_manager.py  test_import_coordinator.py  test_input_synthetic_events.py  test_inspector_contracts.py  test_installer_safety.py  test_integration_asset_database.py  test_integration_components.py  test_integration_physics.py  test_integration_scene.py  test_math.py  test_mcp_capture.py  test_mcp_contracts.py  (+28 more)
services/community-gateway/: README.md  package-lock.json  package.json  wrangler.toml
(+1083 files in other folders)
